--- a/app/app.html
+++ b/app/app.html
@@ -43,8 +43,15 @@
                     <div class="temperature"><span id="temp"></span>&deg;</div>
                 </div>
             </div>
+
+            <div class="traffic">
+                <div class="traffic-inner">
+                    <div class="travel-time"><span id="travel-time"></span></div>
+                </div>
+            </div>
         </div>
     </section>
+
 
 
 </main>
