Added news function

--- a/app/app.html
+++ b/app/app.html
@@ -59,6 +59,15 @@
                     <div class="travel-time"><span id="travel-time"></span></div>
                 </div>
             </div>
+
+
+            <div class="news-feed">
+                <div class="news-feed-inner">
+                    <h2 id="news-header">Current Headlines</h2>
+                    <div id="news-container">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
