First commit of 2017. Added reddit support to magic mirror

--- a/app/app.html
+++ b/app/app.html
@@ -60,11 +60,20 @@
                 </div>
             </div>
 
-
+            <!--
             <div class="news-feed">
                 <div class="news-feed-inner">
                     <h2 id="news-header">Current Headlines</h2>
                     <div id="news-container">
+                    </div>
+                </div>
+            </div>
+            -->
+
+            <div class="reddit">
+                <div class="reddt-feed-inner">
+                    <h2 id="reddit-header">r/<span id="subreddit"></span></h2>
+                    <div id="reddit-container">
                     </div>
                 </div>
             </div>
