--- a/app/app.html
+++ b/app/app.html
@@ -15,6 +15,10 @@
         <!-- normal script imports etc  -->    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="traffic.js"></script>
+        <script src="weather.js"></script>
+        <script src="news.js"></script>
+        <script src="utilities.js"></script>
+
 
         <!-- Insert this line after script imports -->
         <script>if (window.module) module = window.module;</script>
